welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: value t is not a member of Int
  for (cote <- 1 t 4) {
                 ^Runner:3: error: value t is not a member of Int
    for (n <- 1 t 4) {
                ^Runner:10: error: value t is not a member of Int
    for (n <- 1 t 4) {
                ^Runner:16: error: value t is not a member of Int
    for (n <- 1 t 4) {
                ^