welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (tours <- 1 to 7) {
  for (cote <- 1 t 4) {
    for (n <- 1 t 4) {
      avance()
    }
    gauche()
    avance()
    avance()
    droite()
    for (n <- 1 t 4) {
      avance()
    }
    droite()
    avance()
    avance()
    for (n <- 1 t 4) {
      avance()
    }
    gauche()
  }
}